[package]
name = "backtest-bsd"
version = "0.1.0"
edition = "2024"
authors = ["J. O. Makar <jomakar@gmail.com>"]
repository = "https://github.com/jo-makar/backtest-bsd"

[dependencies]
chrono = "0.4.45"
log = "0.4.33"
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
simple_logger = { version = "5.2.0", features = ["threads"] }
